# TraceMind

./: .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  compose.yaml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260717_0001_create_knowledge_bases.py  20260717_0002_create_documents.py  20260717_0003_create_document_chunks.py  20260720_0004_add_document_vector_indexing.py
backend/app/: main.py  reranker_server.py
backend/app/api/: router.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/embedding/: __init__.py  base.py  sentence_transformer.py
backend/app/indexing/: __init__.py  qdrant.py
backend/app/integrations/: qdrant.py  redis.py
backend/app/llm/: __init__.py  base.py  openai_compatible.py
backend/app/models/: __init__.py  base.py  document.py  (+1 more)
backend/tests/: test_chunker.py  test_document_api.py  test_document_dispatcher.py  test_document_indexing_service.py  test_document_integration.py  test_document_parsing_service.py  test_document_reranking.py  test_document_service.py  test_document_settings.py  test_document_storage.py  test_document_task.py  test_embedding.py  test_health.py  test_indexing_api.py  test_indexing_task.py  test_knowledge_base_api.py  test_knowledge_base_integration.py  test_knowledge_base_service.py  test_llm_provider.py  test_parsers.py  test_qdrant_client.py  test_qdrant_gateway.py  test_qdrant_integration.py  test_rag.py  test_rag_api.py  test_reranker_http_client.py  test_reranker_provider.py  test_reranker_server.py
(+98 files in other folders)
